<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AccountFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        style="@style/AppBarLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/recyclerView">

        <com.xslite.sharemyaccountnative.ui.custom.CollapsingToolbar
            android:id="@+id/collapsingToolbar"
            style="@style/CollapsingToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleCollapseMode="fade"
            app:toolbarId="@+id/toolbar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24" />

            <com.xslite.sharemyaccountnative.ui.custom.QrCodeImage
                android:id="@+id/imageQr"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="bottom|center"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/avatars" />
        </com.xslite.sharemyaccountnative.ui.custom.CollapsingToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginVertical="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageAccount"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="10dp"
                        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textAccountTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="16sp"
                        tools:text="Telegram" />
                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textLink"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="https://test.com"
                            android:textAlignment="center"
                            tools:text="https://test.com" />

                        <TextView
                            android:id="@+id/textLinkDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:alpha="0.5"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/button_click_to_copy_account"
                            android:textAlignment="center"
                            android:textSize="12sp" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/textDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/text_qr_desc"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <Button
                    android:id="@+id/buttonShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_share" />

                <Button
                    android:id="@+id/buttonOpen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_open_link"
                    android:theme="@style/ThemeOverlay.Material3.Button.TextButton" />

                <Button
                    android:id="@+id/buttonRemove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_delete"
                    android:theme="@style/ThemeOverlay.Material3.Button.TextButton" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>